fix static analysis for ACS
fix the static analysis for ACS

Bug: 261923316
Test: build pass
Change-Id: I6f27d46063f67ae3244cb5ce39f15d6b6485344b